added simple calculator app

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Vikash kumar</title>
+	<link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
 <p>I am Coming back..</p>
