Update file & folder structure

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Vikash kumar</title>
-	<link rel="stylesheet" type="text/css" href="">
+	<title>Vikash - A Developer</title>
+	<meta name="author" content="vikash" />
+	<meta name="copyright" content="Can use every one with modification" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
+
 </head>
-<body>
-<p>I am Coming back..</p>
-</body>
+	<body>
+		<h1>My Self ! Vikash </h1>
+
+
+		 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    	<script src="js/jquery-3.1.1.js"></script>
+    	<!-- Include all compiled plugins (below), or include individual files as needed -->
+    	<script src="js/bootstrap.min.js"></script>
+	</body>
 </html>
