init some more project

--- a/projects/js/calc/index.html
+++ b/projects/js/calc/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Vikash kumar</title>
+	<title>Calculator</title>
 	<script>
 		function cal(n1) {
 			calculate.text1.value = calculate.text1.value + n1;
