added dependies files & logics

--- a/projects/js/toDo App/index.html
+++ b/projects/js/toDo App/index.html
@@ -11,7 +11,12 @@
 	<body>
 		<h1>To Do App </h1>
 
-		<div id="toDoList"></div>
+		<div>
+				<input type="text" name="task" id="task" />
+				<input type="submit" id="addToDo" />
+			
+		</div>
+		<div id="listItem"></div>
 
 
 		 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
